feat: rich snippet image

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     <meta property="og:title" content="VCG Recordz" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Music Recording Studio" />
-    <meta property="og:image" content="https://kitsuiwebster.github.io/nina-carducci/assets/images/nina-carducci-401.webp" />
+    <meta property="og:image" content="https://gitlab.com/kitsuiwebster/vcg-recordz/-/raw/main/src/assets/images/logo-grey.png?ref_type=heads" />
     <meta property="og:url" content="https://vcgrecordz.eu" />
     
     <!-- When shared on Twitter/X -->
     <meta name="twitter:title" content="VCG Recordz" />
     <meta name="twitter:description" content="Music Recording Studio" />
-    <meta name="twitter:image" content="https://kitsuiwebster.github.io/nina-carducci/assets/images/nina-carducci-401.webp" />
+    <meta name="twitter:image" content="https://gitlab.com/kitsuiwebster/vcg-recordz/-/raw/main/src/assets/images/logo-grey.png?ref_type=heads" />
     <meta name="twitter:site" content="@kitsuiwebster" />
     <meta name="twitter:url" content="https://vcgrecordz.eu" />
     
@@ -31,7 +31,7 @@
         "@context": "https://schema.org",
         "@type": "Society",
         "name": "VCG Recordz",
-        "image": "https://kitsuiwebster.github.io/nina-carducci/assets/images/nina-carducci-401.webp",
+        "image": "https://gitlab.com/kitsuiwebster/vcg-recordz/-/raw/main/src/assets/images/logo-grey.png?ref_type=heads",
         "url": "https://vcgrecordz.eu",
       }
       </script>
