--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Raphaël MARTIN</title>
+    <title>VCG Recordz</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
