feat: index html infos

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>VCG Recordz</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>VCG Recordz</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Discover our Beatmaking, Recording, Mixing and Distribution services at VCG Recordz!"
+    />
+    <meta
+      name="keywords"
+      content="VCG Recordz, music, artists, label, recording, mixing distribution, beatmakers, kitsui, koni, biggy"
+    />
+    <meta name="author" content="VCG Recordz" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="VCG Recordz - Music Label" />
+    <meta
+      property="og:description"
+      content="Discover our Beatmaking, Recording, Mixing and Distribution services at VCG Recordz!"
+    />
+    <meta
+      property="og:image"
+      content="https://vcgrecordz.eu/banner.jpg"
+    />
+    <meta property="og:url" content="https://vcgrecordz.eu/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="VCG Recordz - Music Label" />
+    <meta
+      name="twitter:description"
+      content="Discover our Beatmaking, Recording, Mixing and Distribution services at VCG Recordz!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://vcgrecordz.eu/banner.jpg"
+    />
+
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
